--- a/sampleGUI/.classpath
+++ b/sampleGUI/.classpath
@@ -5,6 +5,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="images/" kind="src" path="src"/>
+	<classpathentry kind="src" path="src/images"/>
+	<classpathentry kind="src" path="sounds"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
